sending data properly